--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!doctype html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/Logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chocoaçu 🍫</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="/Logo.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Chocoaçu - Chocolate Artesanal em Fortaleza</title>
+
+  <meta name="description" content="Chocolates artesanais em Fortaleza. Descubra o sabor autêntico de trufas e bombons como Chocolatudo e Cupuaçu, feitos com paixão e os melhores ingredientes." />
+  <meta name="keywords" content="chocolate artesanal, fortaleza, chocoaçu, doces, trufas, bombom, cupuaçu, encomenda" />
+  <meta name="author" content="Chocoaçu" />
+
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.chocoacu.com.br/" />
+  <meta property="og:title" content="Chocoaçu - Chocolate Artesanal com Sabor de Verdade" />
+  <meta property="og:description" content="Feitos com paixão em Fortaleza, nossos chocolates e trufas são a escolha perfeita para um momento especial." />
+  <meta property="og:image" content="/og-image.png" />
+
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://www.chocoacu.com.br/" />
+  <meta property="twitter:title" content="Chocoaçu - Chocolate Artesanal com Sabor de Verdade" />
+  <meta property="twitter:description" content="Feitos com paixão em Fortaleza, nossos chocolates e trufas são a escolha perfeita para um momento especial." />
+  <meta property="twitter:image" content="/og-image.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
